7 May 2007: Wouter
	- EDNS read from query, used to make reply smaller.
	- advertised edns value constants.

4 May 2007: Wouter
	- msgreply sizefunc is more accurate.
	- config settings for rrset cache size and slabs.
	- hashtable insert takes argument so that a thread can use its own
	  alloc cache to store released keys.
	- alloc cache special_release() locks if necessary.
	- rrset trustworthiness type added.
	- thread keeps a scratchpad region for handling messages.
	- writev used in netevent to write tcp length and data after another.
	  This saves a roundtrip on tcp replies.
	- test for one rrset updated in the cache.
	- test for one rrset which is not updated, as it is not deemed
	  trustworthy enough.
	- test for TTL refreshed in rrset.

3 May 2007: Wouter
	- fill refs. Use new parse and encode to answer queries.
	- stores rrsets in cache.
	- uses new msgreply format in cache.

2 May 2007: Wouter
	- dname unit tests in own file and spread out neatly in functions.
	- more dname unit tests.
	- message encoding creates truncated TC flagged messages if they do 
	  not fit, and will leave out (whole)rrsets from additional if needed.

1 May 2007: Wouter
	- decompress query section, extremely lenient acceptance.
	  But only for answers from other servers, not for plain queries.
	- compression and decompression test cases.
	- some stats added.
	- example.conf interface: line is changed from 127.0.0.1 which leads
	  to problems if used (restricting communication to the localhost),
	  to a documentation and test address.

27 April 2007: Wouter
	- removed iov usage, it is not good for dns message encoding.
	- owner name compression more optimal.
	- rrsig owner name compression.
	- rdata domain name compression.

26 April 2007: Wouter
	- floating point exception fix in lock-verify.
	- lint uses make dependency
	- fixup lint in dname owner domain name compression code.
	- define for offset range that can be compressed to.

25 April 2007: Wouter